--- a/_data/links.yml
+++ b/_data/links.yml
@@ -428,7 +428,7 @@
   cat: hom
   status: does
   date: 2016-08-29
-- title: "Deconstruct why some songs just make us feel so good"
+- title: "Deconstruct why some songs make us feel good"
   url: https://dl.acm.org/citation.cfm?id=3343031.3350867
   cat: hom
   status: does
@@ -3757,3 +3757,8 @@
   cat: vis
   status: prog
   date: 2019-08-21
+- title: "Diagnose common dental pathologies"
+  url: https://www.promaton.com/
+  cat: med
+  status: does
+  date: 2019-09-05
